[tool.poetry]
name = "hypemodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Davron <devrannur@gmail.comn>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adzguy/hypemodern-python"
repository = "https://github.com/adzguy/hypemodern-python"
keywords = ["hypemodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"